[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/GravityRegular5.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/pickups/coin.gd" type="Script" id=2]
[ext_resource path="res://scenes/pickups/coin.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 23.0868

[sub_resource type="CircleShape2D" id=4]
radius = 150.0

[node name="coin" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( -0.5, 0.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Sprite"]
margin_left = -32.0
margin_top = -7.0
margin_right = 32.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource( 3 )

[node name="MagnetArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea2D"]
shape = SubResource( 4 )
[connection signal="area_entered" from="PickupArea2D" to="." method="_on_area_entered"]
[connection signal="area_entered" from="MagnetArea2D" to="." method="_on_magnet_area_entered"]
[connection signal="area_exited" from="MagnetArea2D" to="." method="_on_magnet_area_exited"]
